# wifi-performance-tracker

./: .gitignore  CHANGES.md  README.md  compose.yml  init.sql
backend/: Dockerfile  README.md  pyproject.toml
backend/app/api/: main.py
backend/app/api/routers/: __init__.py  ping_metrics.py  websocket.py
backend/app/modules/: __init__.py  crud.py  database.py  ping_service.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DowntimeTimeline.tsx
frontend/src/components/ui/: animated-counter.tsx  animated-percentage.tsx  button.tsx  card.tsx  modal.tsx  toggle.tsx
frontend/src/contexts/: ThemeContext.tsx
